--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Table</title>
-    <style>
-        table {
-  border-collapse: collapse;
-}
-        table, th, td {
-  border: 1.5px solid #000000;
-}
-        th, td {
-  padding: 10px;
-}
-    </style>
-</head>
-<body>
-{#{{ students }}#}
-<h1>Django Dynamic Data Rendering</h1>
-<hr>
-<br>
-<br>
+{% extends 'base.html' %}
 
+
+{% block start %}
 <a href= "/dt.html/">View Results</a>
-</body>
-</html>
+{% endblock %}
